fix: package sevenzipjbindings as JAR for automatic module naming
The sevenzipjbindings module must be packaged as a JAR on the module path
(not as a classes directory) so that JPMS automatic module naming derives
the correct module name from the JAR filename, allowing --add-reads
configuration to grant proper access to SevenZip format providers.